--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "bootstrap": "^5.3.7",
+    "firebase": "^12.0.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
