--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:prod": "vite build --mode production",
+    "serve": "vite preview --port 3000"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
@@ -22,5 +24,8 @@
     "sass-embedded": "^1.89.2",
     "tailwindcss": "^4.1.11",
     "vite": "^7.0.4"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
