--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@tailwindcss/vite": "^4.1.11",
     "bootstrap": "^5.3.7",
     "firebase": "^12.0.0",
+    "pinia": "^2.1.7",
+    "terser": "^5.43.1",
     "vue": "^3.5.17",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
