--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "vite preview --port 3000"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
     "@tailwindcss/vite": "^4.1.11",
     "bootstrap": "^5.3.7",
     "firebase": "^12.0.0",
